[tool.ruff]
target-version = "py39"
extend-select = ["I", "UP"]

[tool.pytest.ini_options]
addopts = "--cov=tastymap/ --cov-report=term-missing"

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "tastymap/__init__.py"

[tool.hatch.envs.default]
python = "3.9"
dependencies = [
    "black",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pytest-asyncio",
    "panel",
    "param",
    "requests",
    "xarray",
    "netcdf4",
    "pooch",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "black .",
  "ruff --fix .",
  "mypy tastymap/",
]
lint-check = [
  "black --check .",
  "ruff .",
  "mypy tastymap/",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "tastymap"
authors = [
  { name = "tastymap" }
]
description = "Color palettes for your palate"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
ui = [
    "panel",
    "param",
    "requests",
    "xarray",
    "netcdf4",
    "pooch",
]

ai = [
    "marvin",
    "pydantic",
]

[project.urls]
Documentation = "https://ahuang11.github.io/tastymap/"
Source = "https://github.com/ahuang11/tastymap"

[project.scripts]
tastymap = "tastymap.cli:main"
